Add failsafe plugin and fix some compatibility issues